--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,9 @@
   "manifest_version": 2,
   "name": "HN Click",
   "version": "0.1",
+  "permissions": [
+    "tabs"
+  ],
   "content_scripts": [{
     "matches": [
       "https://news.ycombinator.com/*",
